--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             National Honor's Society - Olympus High School - 2019-2022
                         </li>
                     </ul>
-                    <a href="/scratch.html">Scratch Page</a>
+                    <a href="scratch.html">Scratch Page</a>
                 </div>
             </section>
         </div>
